--- a/css/main.scss
+++ b/css/main.scss
@@ -2,25 +2,31 @@ body {
 	background: #eee;
 }
 
-.blog .entry {
-	h1 {
-		font-size: 20px;
-		color: blue;
+.blog {
+	> h1 {
+		color: red;
+		border: 1px solid red;
 	}
-
-	p {
-		font-size: 12px;
-	}
-
-	a {
-	color: red;
+	.entry {
+		h1 {
+			font-size: 20px;
+			color: blue;
+		}
+		p {
+			font-size: 12px;
+			margin: 20px;
+			html.csscolumns & {
+				column-count: 2;
+				column-gap: 10px;
+				margin: 10px;
+			}
+		}
+		a {
+			color: red;
+			&:hover {
+				color: blue;
+			}
+		}
 	}
 }
 
-html.csscolumns {
-	.blog .entry {
-		column-count: 2;
-		column-gap: 10px;
-		margin: 10px;
-	}
-}
